Remove fully qualified names